src/test/error/symbol.lns
let _val = 1; // error
fn _func1() { // error
}
fn func2( _val:int ) { // error
}
class _Test { // error
   fn _func() {  // error
   }
}
macro Hoge() {  // error
}
print( __func__ );  // error
